--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -45,8 +45,7 @@
     "\n",
     "import pyarrow.dataset as ds\n",
     "\n",
-    "from catboost_incremental.catboost_trainer import CatBoostTrainer\n",
-    "from catboost_incremental.data_loader import DataLoader\n",
+    "from catboost_incremental import DataLoader, CatBoostTrainer\n",
     "\n",
     "# Load full dataset\n",
     "dataset_path = \"../data/\"\n",
