--- a/notebooks/tuning.ipynb
+++ b/notebooks/tuning.ipynb
@@ -30,9 +30,7 @@
     "import pyarrow.dataset as ds\n",
     "from ray import tune\n",
     "\n",
-    "from catboost_incremental.catboost_trainer import CatBoostTrainer\n",
-    "from catboost_incremental.catboost_tuner import CatBoostTuner\n",
-    "from catboost_incremental.data_loader import DataLoader\n",
+    "from catboost_incremental import DataLoader, CatBoostTrainer, CatBoostTuner\n",
     "\n",
     "dataset_path = str(Path(\"../data/\").resolve()) + \"/\"\n",
     "\n",
